dataset1235/2025-2/2318198438/users/3154614172/executions/2445341515_2086141900.log
== RUN (2025-09-02 00:30:23)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tg(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:30:27)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tg(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:31:08)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tg(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:30:11)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tg(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:43:35)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tan(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:30:20)
-- CODE: 
from math import*
comprimento_do_lado = float(input())

apotema = comprimento_do_lado / (2*tg(pi/11))
area = (11 * comprimento_do_lado * apotema) / 2

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = comprimento_do_lado / (2*tg(pi/11))
                                       ^^
NameError: name 'tg' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
